deployment/k8s/manifiesto-k8s.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: namespace1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: namespace1
  name: backend-users-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: backend-users-api
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend-users-api
    spec:
      containers:
        - name: backend-users-api
          image: 486655662493.dkr.ecr.us-east-1.amazonaws.com/backend-test-repo:latest
          resources:
            requests:
              memory: "4Gi"
              cpu: "2"
            limits:
              memory: "16Gi"
              cpu: "2"
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: namespace1
  name: backend-users-service
spec:
  ports:
    - name: http
      protocol: TCP
      targetPort: 8080
      port: 8090
  type: NodePort
  selector:
    app.kubernetes.io/name: backend-users-api
