deployment/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: ingress-test
  namespace: namespace-test
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: backend-users-service
            port:
              number: 8090
        path: /users
        pathType: ImplementationSpecific
      - backend:
          service:
            name: backend-jobs-service
            port:
              number: 8091
        path: /jobs
        pathType: ImplementationSpecific
